frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: aron918/frontend-teleinsight-tele-insight-capstone-project-frontend:4004165cf134909766f59701741d7aa1ca82effe
        ports:
        - containerPort: 3000
