frontend/frontend-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: fe.teleinsight-dev.a.gebeyalearning.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - fe.teleinsight-dev.a.gebeyalearning.com
    secretName: cert-certeficate-tls # < cert-manager will store the created certificate in this secret.

  # spec:
  # tls:
  # - hosts:
  #   - fe.teleinsight-dev.gebeyalearning.com
  #   secretName: letsencrypt-prod-dev
  # rules:
  # - host: fe.teleinsight-dev.a.gebeyalearning.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend-svc
  #           port:
  #             number: 80
